[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Map.gd" type="Script" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyTrainButton" type="Button" parent="HUD/VBoxContainer"]
margin_right = 81.0
margin_bottom = 20.0
text = "BUY TRAIN"

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/CenterContainer"]
margin_left = 479.0
margin_right = 544.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TEXT HERE"

[node name="Map" type="Node2D" parent="."]
position = Vector2( 100, 0 )
script = ExtResource( 3 )

[node name="NewStationTimer" type="Timer" parent="Map"]
wait_time = 20.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PopupMenu" type="PopupMenu" parent="CanvasLayer"]
margin_right = 20.0
margin_bottom = 20.0

[connection signal="mouse_entered" from="HUD/VBoxContainer/BuyTrainButton" to="." method="_on_BuyTrainButton_mouse_entered"]
[connection signal="mouse_exited" from="HUD/VBoxContainer/BuyTrainButton" to="." method="_on_BuyTrainButton_mouse_exited"]
[connection signal="pressed" from="HUD/VBoxContainer/BuyTrainButton" to="." method="_on_BuyTrainButton_pressed"]
[connection signal="timeout" from="Map/NewStationTimer" to="Map" method="_on_NewStationTimer_timeout"]
